adds discover pipeline[WIP]
